# rust-wss-client

./: .travis.yml  Cargo.toml  README.md  build_linux.sh
.cargo/: config.toml
src/: err.rs  lib.rs  main.rs
