[package]
name = "wssclient"
version = "0.1.0"
edition = "2018"
authors = ["LamHai <lamhai141@gmail.com >"]
license = "MIT"
homepage = "https://github.com/lamhai1401/rust-wss-client"
repository = "https://github.com/lamhai1401/rust-wss-client"
documentation = "https://github.com/lamhai1401/rust-wss-client"
description = "Wss 11 for client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wssclient"
src = "src/main.rs"

[lib]
name = "wssclient"
path = "src/lib.rs"

[dependencies]
log = "0.4"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio-tungstenite = "*"
url = "2.2.2"
tokio = { version = "1.2.0", features = ["rt-multi-thread", "macros"] }
serde = { version ="1.0.80", features = ["derive"] }
serde_json = "1.0.13"
derive_more = "0.99.9"

