[[bin]]
name = "wssclient"
src = "src/main.rs"

[dependencies]
log = "0.4"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio-tungstenite = "*"
tokio = { version = "1.17.0", features = ["full"] }
url = "2.2.2"
serde = { version ="1.0.80", features = ["derive"] }
serde_json = "1.0.13"
derive_more = "0.99.9"
snafu = { version = "0.7.0"}

[lib]
name = "wssclient"
path = "src/lib.rs"

[package]
name = "wssclient"
version = "0.1.0"
edition = "2018"
authors = ["LamHai <lamhai141@gmail.com >"]
license = "MIT"
homepage = "https://github.com/lamhai1401/rust-wss-client"
repository = "https://github.com/lamhai1401/rust-wss-client"
documentation = "https://github.com/lamhai1401/rust-wss-client"
description = "Wss 11 for client"
